Upgrade ML evaluation pipeline: added 5-fold cross-validation, feature importance analysis, and overfitting diagnostics

--- a/frontend/communication_test.html
+++ b/frontend/communication_test.html
@@ -384,6 +384,7 @@
     </div>
   </div>
 
+  <script src="js/userContext.js"></script>
   <script src="communication_test.js"></script>
   <!-- Ready Check Modal -->
   <div id="ready-modal"
