--- a/frontend/opportunities.html
+++ b/frontend/opportunities.html
@@ -8,25 +8,26 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <style>
     :root {
-      --primary: #2563eb;
-      --primary-dark: #1e40af;
-      --bg-page: #f8fafc;
-      --bg-card: #ffffff;
-      --text-main: #1e293b;
-      --text-muted: #64748b;
-      --accent-internship: #0ea5e9;
-      --accent-hackathon: #8b5cf6;
-      --accent-scholarship: #f59e0b;
+      --primary: #8B5CF6;
+      --primary-dark: #7c3aed;
+      --bg-page: #0F172A;
+      --bg-card: #1E293B;
+      --text-main: #F8FAFC;
+      --text-muted: #94A3B8;
+      --accent-internship: #38bdf8;
+      --accent-hackathon: #a78bfa;
+      --accent-scholarship: #fbbf24;
       --success: #10b981;
       --warning: #f59e0b;
       --danger: #ef4444;
+      --border-color: rgba(255, 255, 255, 0.05);
     }
 
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Inter', sans-serif;
+      font-family: 'Outfit', 'Inter', sans-serif;
     }
 
     body {
@@ -39,9 +40,9 @@
 
     /* LAYOUT */
     .sidebar {
-      width: 280px;
-      background: white;
-      border-right: 1px solid #e2e8f0;
+      width: 260px;
+      background: #0B1121;
+      border-right: 1px solid var(--border-color);
       padding: 24px;
       display: flex;
       flex-direction: column;
@@ -56,43 +57,45 @@
     }
 
     .header {
-      height: 70px;
-      background: white;
-      border-bottom: 1px solid #e2e8f0;
+      height: 80px;
+      background: var(--bg-page);
+      border-bottom: 1px solid var(--border-color);
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 0 32px;
+      padding: 0 40px;
       flex-shrink: 0;
     }
 
     .content-area {
       flex: 1;
-      padding: 32px;
+      padding: 40px;
       overflow-y: auto;
     }
 
     /* TYPOGRAPHY */
     h1 {
-      font-size: 1.25rem;
+      font-size: 1.5rem;
       font-weight: 700;
       color: var(--text-main);
     }
 
     h2 {
-      font-size: 1.1rem;
+      font-size: 1.25rem;
       font-weight: 600;
       margin-bottom: 16px;
+      color: var(--text-main);
     }
 
     h3 {
-      font-size: 1rem;
+      font-size: 1.1rem;
       font-weight: 600;
+      color: var(--text-main);
     }
 
     p {
-      font-size: 0.9rem;
-      line-height: 1.5;
+      font-size: 0.95rem;
+      line-height: 1.6;
       color: var(--text-muted);
     }
 
@@ -115,28 +118,38 @@
       align-items: center;
       gap: 10px;
       margin-bottom: 8px;
-      font-size: 0.9rem;
+      font-size: 0.95rem;
       cursor: pointer;
+      color: var(--text-muted);
+      transition: color 0.2s;
+    }
+
+    .checkbox-item:hover {
+      color: var(--text-main);
     }
 
     .checkbox-item input {
       accent-color: var(--primary);
+      width: 16px;
+      height: 16px;
+      background: #1e293b;
+      border-color: #334155;
     }
 
     /* TABS */
     .tabs {
       display: flex;
-      gap: 24px;
-      border-bottom: 1px solid #e2e8f0;
-      padding: 0 32px;
-      background: white;
+      gap: 32px;
+      border-bottom: 1px solid var(--border-color);
+      padding: 0 40px;
+      background: var(--bg-page);
       flex-shrink: 0;
     }
 
     .tab {
       padding: 16px 4px;
       font-weight: 500;
-      font-size: 0.95rem;
+      font-size: 1rem;
       color: var(--text-muted);
       cursor: pointer;
       border-bottom: 2px solid transparent;
@@ -155,18 +168,18 @@
     /* GRID */
     .opp-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
       gap: 24px;
       padding-bottom: 40px;
     }
 
     /* CARDS */
     .card {
-      background: white;
-      border-radius: 12px;
-      border: 1px solid #e2e8f0;
-      padding: 20px;
-      transition: transform 0.2s, box-shadow 0.2s;
+      background: var(--bg-card);
+      border-radius: 16px;
+      border: 1px solid var(--border-color);
+      padding: 24px;
+      transition: transform 0.2s, box-shadow 0.2s, border-color 0.2s;
       position: relative;
       display: flex;
       flex-direction: column;
@@ -176,63 +189,69 @@
 
     .card:hover {
       transform: translateY(-4px);
-      box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.3);
       border-color: var(--primary);
     }
 
     .badge-top {
       position: absolute;
-      top: 20px;
-      right: 20px;
+      top: 24px;
+      right: 24px;
       font-size: 0.75rem;
-      font-weight: 600;
-      padding: 4px 10px;
+      font-weight: 700;
+      padding: 6px 12px;
       border-radius: 99px;
       text-transform: uppercase;
+      letter-spacing: 0.05em;
     }
 
     .badge-internship {
-      background: #e0f2fe;
+      background: rgba(14, 165, 233, 0.15);
       color: var(--accent-internship);
     }
 
     .badge-hackathon {
-      background: #f3e8ff;
+      background: rgba(139, 92, 246, 0.15);
       color: var(--accent-hackathon);
     }
 
     .badge-scholarship {
-      background: #fef3c7;
+      background: rgba(245, 158, 11, 0.15);
       color: var(--accent-scholarship);
     }
 
     .card-header {
       display: flex;
-      gap: 12px;
+      gap: 16px;
       align-items: flex-start;
     }
 
     .provider-logo {
-      width: 44px;
-      height: 44px;
-      background: #f1f5f9;
-      border-radius: 8px;
+      width: 48px;
+      height: 48px;
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 12px;
       display: flex;
       align-items: center;
       justify-content: center;
       font-weight: 700;
-      color: var(--text-muted);
-      font-size: 1.2rem;
+      color: var(--text-main);
+      font-size: 1.25rem;
+    }
+
+    .role-info {
+      padding-right: 90px;
+      /* Prevent overlap with absolute badge */
     }
 
     .role-info h3 {
-      font-size: 1.05rem;
-      margin-bottom: 4px;
+      font-size: 1.1rem;
+      margin-bottom: 6px;
       line-height: 1.3;
     }
 
     .role-info span {
-      font-size: 0.85rem;
+      font-size: 0.9rem;
       color: var(--text-muted);
       font-weight: 500;
     }
@@ -244,25 +263,26 @@
     }
 
     .tag {
-      font-size: 0.75rem;
-      padding: 4px 8px;
-      background: #f1f5f9;
-      border-radius: 4px;
+      font-size: 0.8rem;
+      padding: 6px 10px;
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 6px;
       color: var(--text-muted);
       font-weight: 500;
     }
 
     .intelligence-preview {
-      background: #eff6ff;
-      border-radius: 8px;
-      padding: 10px 12px;
+      background: rgba(59, 130, 246, 0.1);
+      border-radius: 12px;
+      padding: 12px 16px;
       border-left: 3px solid var(--primary);
     }
 
     .intelligence-text {
-      font-size: 0.8rem;
-      color: var(--primary-dark);
+      font-size: 0.85rem;
+      color: #93c5fd;
       font-weight: 500;
+      line-height: 1.5;
     }
 
     .card-footer {
@@ -270,24 +290,24 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding-top: 12px;
-      border-top: 1px solid #f1f5f9;
+      padding-top: 16px;
+      border-top: 1px solid var(--border-color);
     }
 
     .deadline {
-      font-size: 0.8rem;
+      font-size: 0.85rem;
       color: var(--danger);
       font-weight: 600;
     }
 
     .btn-view {
-      font-size: 0.85rem;
+      font-size: 0.9rem;
       font-weight: 600;
       color: var(--primary);
       text-decoration: none;
       display: flex;
       align-items: center;
-      gap: 4px;
+      gap: 6px;
     }
 
     /* MODAL */
@@ -297,48 +317,51 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.5);
+      background: rgba(0, 0, 0, 0.7);
       display: none;
       justify-content: center;
       align-items: center;
       z-index: 1000;
-      backdrop-filter: blur(4px);
+      backdrop-filter: blur(8px);
     }
 
     .modal {
-      background: white;
+      background: var(--bg-card);
       width: 600px;
       max-width: 90%;
       max-height: 90vh;
-      border-radius: 16px;
+      border-radius: 20px;
       padding: 0;
       display: flex;
       flex-direction: column;
       overflow: hidden;
-      animation: slideUp 0.3s ease-out;
+      animation: slideUp 0.3s cubic-bezier(0.16, 1, 0.3, 1);
+      border: 1px solid var(--border-color);
+      box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
     }
 
     .modal-header {
-      padding: 24px;
-      border-bottom: 1px solid #e2e8f0;
+      padding: 24px 32px;
+      border-bottom: 1px solid var(--border-color);
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background: #f8fafc;
+      background: rgba(255, 255, 255, 0.02);
     }
 
     .modal-body {
-      padding: 24px;
+      padding: 32px;
       overflow-y: auto;
     }
 
     .section-title {
-      font-size: 0.9rem;
+      font-size: 0.85rem;
       font-weight: 700;
       text-transform: uppercase;
       color: var(--text-muted);
-      margin-bottom: 12px;
-      margin-top: 24px;
+      margin-bottom: 16px;
+      margin-top: 32px;
+      letter-spacing: 0.05em;
     }
 
     .section-title:first-child {
@@ -346,44 +369,48 @@
     }
 
     .ai-insight {
-      background: #f0f9ff;
-      padding: 16px;
-      border-radius: 8px;
-      border: 1px solid #bae6fd;
-      margin-bottom: 20px;
+      background: rgba(139, 92, 246, 0.1);
+      padding: 20px;
+      border-radius: 12px;
+      border: 1px solid rgba(139, 92, 246, 0.2);
+      margin-bottom: 24px;
     }
 
     .ai-insight h4 {
-      color: #0369a1;
-      font-size: 0.95rem;
-      margin-bottom: 8px;
+      color: #c4b5fd;
+      font-size: 1rem;
+      margin-bottom: 10px;
       display: flex;
       align-items: center;
-      gap: 8px;
+      gap: 10px;
     }
 
     .action-btn {
       background: var(--primary);
       color: white;
-      padding: 12px 24px;
-      border-radius: 8px;
+      padding: 16px 24px;
+      border-radius: 12px;
       font-weight: 600;
       text-align: center;
       display: block;
       width: 100%;
       border: none;
       cursor: pointer;
-      transition: background 0.2s;
+      transition: all 0.2s;
       text-decoration: none;
+      font-size: 1rem;
+      margin-top: 32px;
     }
 
     .action-btn:hover {
       background: var(--primary-dark);
+      transform: translateY(-2px);
+      box-shadow: 0 10px 15px -3px rgba(139, 92, 246, 0.3);
     }
 
     @keyframes slideUp {
       from {
-        transform: translateY(20px);
+        transform: translateY(40px);
         opacity: 0;
       }
 
@@ -399,15 +426,18 @@
 
   <!-- Sidebar -->
   <aside class="sidebar">
-    <div style="font-weight: 700; font-size: 1.4rem; color: var(--primary); margin-bottom: 20px;">Ascend 🚀</div>
+    <div
+      style="font-weight: 700; font-size: 1.5rem; color: var(--primary); margin-bottom: 40px; display: flex; align-items: center; gap: 10px;">
+      <span>Ascend 🚀</span>
+    </div>
 
-    <div style="margin-bottom: 24px;">
+    <div style="margin-bottom: 32px;">
       <a href="dashboard.html"
-        style="display: block; padding: 12px; border-radius: 8px; color: var(--text-main); text-decoration: none; font-weight: 600; background: var(--primary); margin-bottom: 10px;">📊
+        style="display: block; padding: 12px 16px; border-radius: 8px; color: white; text-decoration: none; font-weight: 500; background: var(--primary); margin-bottom: 8px;">📊
         Back to Dashboard</a>
 
       <a href="roadmap_setup.html"
-        style="display: block; padding: 12px; border-radius: 8px; color: var(--text-main); text-decoration: none; font-weight: 600; background: #f1f5f9; color: #0F172A;">📍
+        style="display: block; padding: 12px 16px; border-radius: 8px; color: var(--text-muted); text-decoration: none; font-weight: 500; transition: all 0.2s;">📍
         My Roadmap</a>
     </div>
 
@@ -432,8 +462,8 @@
     </div>
     <div style="margin-top: auto;">
       <button onclick="location.href='index.html'"
-        style="background: none; border: none; color: #ef4444; width: 100%; text-align: left; padding: 8px 0; font-weight: 600; cursor: pointer; font-size: 0.9rem;">Logout</button>
-      <div style="font-size: 0.8rem; color: var(--text-muted);">Signed in</div>
+        style="background: none; border: none; color: #ef4444; width: 100%; text-align: left; padding: 12px 0; font-weight: 600; cursor: pointer; font-size: 0.95rem;">Logout</button>
+      <div style="font-size: 0.85rem; color: var(--text-muted);">Signed in</div>
     </div>
   </aside>
 
@@ -480,12 +510,12 @@
         <!-- AI Intelligence Block -->
         <div class="ai-insight">
           <h4>✨ Why this matters for You (2026)</h4>
-          <p id="modalWhyMatters" style="color: #0c4a6e; font-size: 0.95rem;"></p>
+          <p id="modalWhyMatters" style="color: var(--text-main); font-size: 0.95rem; line-height: 1.6;"></p>
         </div>
 
         <div class="section-title">Preparation Strategy</div>
         <p id="modalPrepTip"
-          style="background:#f0f9ff; padding:12px; border-left:3px solid var(--accent-hackathon); font-size: 0.9rem;">
+          style="background: rgba(255,255,255,0.05); color: var(--text-main); padding:16px; border-radius: 12px; border-left:4px solid var(--accent-hackathon); font-size: 0.9rem; line-height: 1.6;">
         </p>
 
         <div class="section-title">Key Requirements</div>
@@ -610,7 +640,7 @@
 
       const skillsContainer = document.getElementById('modalSkills');
       skillsContainer.innerHTML = item.requirements.skills.map(s =>
-        `<span style="background:#f1f5f9; padding:6px 12px; border-radius:6px; font-size:0.85rem;">${s}</span>`
+        `<span style="background: rgba(255,255,255,0.1); color: var(--text-main); padding:8px 16px; border-radius:8px; font-size:0.85rem; border: 1px solid rgba(255,255,255,0.1);">${s}</span>`
       ).join('');
 
       document.getElementById('detailsModal').style.display = 'flex';
