--- a/frontend/technical_test_result.html
+++ b/frontend/technical_test_result.html
@@ -9,10 +9,109 @@
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
   <style>
+    :root {
+      --accent: #6366f1;
+      --accent-2: #4f46e5;
+      --sidebar-bg: #0f1724;
+      --menu-text: #cbd5e1;
+    }
+
     body {
       font-family: 'Plus Jakarta Sans', sans-serif;
       background-color: #0c0c0e;
       color: #fff;
+      margin: 0;
+      display: flex;
+      min-height: 100vh;
+    }
+
+    /* ===== SIDEBAR ===== */
+    .sidebar {
+      width: 300px;
+      background: var(--sidebar-bg);
+      color: white;
+      padding: 26px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      flex-shrink: 0;
+    }
+
+    .brand-logo {
+      width: 140px;
+      height: 140px;
+      border-radius: 50%;
+      background: #0b1220;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 10px;
+    }
+
+    .brand-logo img {
+      width: 80px
+    }
+
+    .sidebar-title {
+      color: #a5b4fc;
+      font-weight: 700;
+      margin-bottom: 20px;
+    }
+
+    .user-row {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      margin-bottom: 24px;
+    }
+
+    .user-icon {
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      background: #1f2937;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .menu {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .menu button {
+      padding: 12px;
+      border: none;
+      background: transparent;
+      color: var(--menu-text);
+      font-weight: 600;
+      text-align: left;
+      cursor: pointer;
+      border-radius: 8px;
+      font-family: inherit;
+    }
+
+    .menu button.active {
+      background: linear-gradient(90deg, var(--accent), var(--accent-2));
+      color: white;
+    }
+
+    .sidebar-foot {
+      margin-top: auto;
+      font-size: 12px;
+      color: #9aa7c7;
+    }
+
+    /* ===== MAIN ===== */
+    .main {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 40px;
     }
 
     .glass {
@@ -27,49 +126,82 @@
   </style>
 </head>
 
-<body class="min-h-screen flex items-center justify-center p-6">
-  <div class="max-w-xl w-full glass rounded-3xl p-10 shadow-2xl text-center">
-    <div class="mb-8">
-      <h1 class="text-3xl font-bold mb-2">Assessment Results</h1>
-      <p id="test-info" class="text-gray-400 uppercase tracking-widest text-xs font-semibold">DATA STRUCTURES • EASY</p>
+<body>
+
+  <!-- SIDEBAR -->
+  <aside class="sidebar">
+    <div class="brand-logo"><img src="assets/logo.png"></div>
+    <div class="sidebar-title">Career Companion</div>
+
+    <div class="user-row">
+      <div class="user-icon">👤</div>
+      <strong class="user-greeting">Hi, <span class="user-name-display">Student</span></strong>
     </div>
 
-    <div class="relative inline-block mb-10">
-      <svg class="w-48 h-48 transform -rotate-90">
-        <circle cx="96" cy="96" r="88" stroke="currentColor" stroke-width="12" fill="transparent" class="text-gray-800">
-        </circle>
-        <circle id="progress-circle" cx="96" cy="96" r="88" stroke="currentColor" stroke-width="12" fill="transparent"
-          stroke-dasharray="552.92" stroke-dashoffset="552.92"
-          class="text-indigo-500 transition-all duration-1000 ease-out"></circle>
-      </svg>
-      <div class="absolute inset-0 flex flex-col items-center justify-center">
-        <span id="score-text" class="text-5xl font-bold">0</span>
-        <span id="max-score" class="text-gray-500 text-sm font-medium">/ 50</span>
+    <nav class="menu">
+      <button onclick="location.href='resume_upload.html'">Resume Upload</button>
+      <button class="active">Technical Test</button>
+      <button onclick="location.href='communication_test.html'">Communication Test</button>
+      <button onclick="location.href='mock_interview_setup.html'">Mock Interview</button>
+      <button onclick="location.href='opportunities.html'">Opportunities</button>
+      <button onclick="location.href='roadmap_setup.html'">Roadmap</button>
+      <button onclick="location.href='dashboard.html'">Dashboard</button>
+    </nav>
+
+    <div style="margin-top: auto; width: 100%;">
+      <button onclick="location.href='index.html'"
+        style="background: none; color: #EF4444; width:100%; text-align:left; padding:12px; border:none; font-weight:600; font-size:14px; cursor:pointer; font-family:inherit;">Logout</button>
+      <div class="sidebar-foot" style="padding-left:12px; margin-top:0;">Signed in</div>
+    </div>
+  </aside>
+
+  <main class="main">
+    <div class="max-w-xl w-full glass rounded-3xl p-10 shadow-2xl text-center">
+      <div class="mb-8">
+        <h1 class="text-3xl font-bold mb-2">Assessment Results</h1>
+        <p id="test-info" class="text-gray-400 uppercase tracking-widest text-xs font-semibold">DATA STRUCTURES • EASY
+        </p>
+      </div>
+
+      <div class="relative inline-block mb-10">
+        <svg class="w-48 h-48 transform -rotate-90">
+          <circle cx="96" cy="96" r="88" stroke="currentColor" stroke-width="12" fill="transparent"
+            class="text-gray-800">
+          </circle>
+          <circle id="progress-circle" cx="96" cy="96" r="88" stroke="currentColor" stroke-width="12" fill="transparent"
+            stroke-dasharray="552.92" stroke-dashoffset="552.92"
+            class="text-indigo-500 transition-all duration-1000 ease-out"></circle>
+        </svg>
+        <div class="absolute inset-0 flex flex-col items-center justify-center">
+          <span id="score-text" class="text-5xl font-bold">0</span>
+          <span id="max-score" class="text-gray-500 text-sm font-medium">/ 50</span>
+        </div>
+      </div>
+
+      <div class="space-y-6 mb-10">
+        <div>
+          <h2 id="label-text" class="text-2xl font-bold text-indigo-400">Loading...</h2>
+          <p id="accuracy-text" class="text-sm text-gray-500 mt-1">Accuracy: 0%</p>
+        </div>
+        <p id="feedback-text" class="text-gray-300 leading-relaxed max-w-sm mx-auto">
+          Please wait while we fetch your results.
+        </p>
+      </div>
+
+      <div class="grid grid-cols-2 gap-4">
+        <button onclick="window.location.href='technical_test_setup.html'"
+          class="bg-white/5 hover:bg-white/10 text-white font-bold py-4 rounded-xl transition-all">
+          Try again
+        </button>
+        <button onclick="window.location.href='dashboard.html'"
+          class="accent-gradient hover:opacity-90 text-white font-bold py-4 rounded-xl shadow-lg transition-all">
+          Exit Module
+        </button>
       </div>
     </div>
+  </main>
 
-    <div class="space-y-6 mb-10">
-      <div>
-        <h2 id="label-text" class="text-2xl font-bold text-indigo-400">Loading...</h2>
-        <p id="accuracy-text" class="text-sm text-gray-500 mt-1">Accuracy: 0%</p>
-      </div>
-      <p id="feedback-text" class="text-gray-300 leading-relaxed max-w-sm mx-auto">
-        Please wait while we fetch your results.
-      </p>
-    </div>
-
-    <div class="grid grid-cols-2 gap-4">
-      <button onclick="window.location.href='technical_test_setup.html'"
-        class="bg-white/5 hover:bg-white/10 text-white font-bold py-4 rounded-xl transition-all">
-        Try again
-      </button>
-      <button onclick="window.location.href='dashboard.html'"
-        class="accent-gradient hover:opacity-90 text-white font-bold py-4 rounded-xl shadow-lg transition-all">
-        Exit Module
-      </button>
-    </div>
-  </div>
-
+  <script src="js/userContext.js"></script>
   <script>
     async function fetchResult() {
       const testId = sessionStorage.getItem('lastTestId');
