--- a/frontend/technical_test_session.html
+++ b/frontend/technical_test_session.html
@@ -9,10 +9,109 @@
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
   <style>
+    :root {
+      --accent: #6366f1;
+      --accent-2: #4f46e5;
+      --sidebar-bg: #0f1724;
+      --menu-text: #cbd5e1;
+    }
+
     body {
       font-family: 'Plus Jakarta Sans', sans-serif;
       background-color: #0c0c0e;
       color: #fff;
+      margin: 0;
+      display: flex;
+      min-height: 100vh;
+    }
+
+    /* ===== SIDEBAR ===== */
+    .sidebar {
+      width: 300px;
+      background: var(--sidebar-bg);
+      color: white;
+      padding: 26px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      flex-shrink: 0;
+    }
+
+    .brand-logo {
+      width: 140px;
+      height: 140px;
+      border-radius: 50%;
+      background: #0b1220;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 10px;
+    }
+
+    .brand-logo img {
+      width: 80px
+    }
+
+    .sidebar-title {
+      color: #a5b4fc;
+      font-weight: 700;
+      margin-bottom: 20px;
+    }
+
+    .user-row {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      margin-bottom: 24px;
+    }
+
+    .user-icon {
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      background: #1f2937;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .menu {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .menu button {
+      padding: 12px;
+      border: none;
+      background: transparent;
+      color: var(--menu-text);
+      font-weight: 600;
+      text-align: left;
+      cursor: pointer;
+      border-radius: 8px;
+      font-family: inherit;
+    }
+
+    .menu button.active {
+      background: linear-gradient(90deg, var(--accent), var(--accent-2));
+      color: white;
+    }
+
+    .sidebar-foot {
+      margin-top: auto;
+      font-size: 12px;
+      color: #9aa7c7;
+    }
+
+    /* ===== MAIN ===== */
+    .main {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      padding: 40px;
+      overflow-y: auto;
     }
 
     .glass {
@@ -40,44 +139,71 @@
   <script src="js/userContext.js"></script>
 </head>
 
-<body class="min-h-screen flex flex-col p-6 relative">
-  <div style="position: absolute; top: 2rem; right: 2rem;">
-    <a href="index.html" class="text-red-500 font-semibold hover:text-red-400 transition-colors">Logout</a>
-  </div>
-  <!-- Header / Progress -->
-  <div class="max-w-4xl w-full mx-auto flex items-center justify-between mb-8">
-    <div>
-      <h2 id="subject-name" class="text-xl font-bold">Data Structures</h2>
-      <p id="difficulty-badge" class="text-xs uppercase tracking-widest text-indigo-400 font-semibold">EASY MODE</p>
+<body>
+
+  <!-- SIDEBAR -->
+  <aside class="sidebar">
+    <div class="brand-logo"><img src="assets/logo.png"></div>
+    <div class="sidebar-title">Career Companion</div>
+
+    <div class="user-row">
+      <div class="user-icon">👤</div>
+      <strong class="user-greeting">Hi, <span class="user-name-display">Student</span></strong>
     </div>
-    <div class="text-right">
-      <p class="text-sm text-gray-400">Question <span id="current-index">1</span> of <span
-          id="total-questions">10</span></p>
-      <div class="w-48 h-1.5 bg-gray-800 rounded-full mt-2 overflow-hidden">
-        <div id="progress-bar" class="h-full accent-gradient transition-all duration-500" style="width: 10%"></div>
+
+    <nav class="menu">
+      <button onclick="location.href='resume_upload.html'">Resume Upload</button>
+      <button class="active">Technical Test</button>
+      <button onclick="location.href='communication_test.html'">Communication Test</button>
+      <button onclick="location.href='mock_interview_setup.html'">Mock Interview</button>
+      <button onclick="location.href='opportunities.html'">Opportunities</button>
+      <button onclick="location.href='roadmap_setup.html'">Roadmap</button>
+      <button onclick="location.href='dashboard.html'">Dashboard</button>
+    </nav>
+
+    <div style="margin-top: auto; width: 100%;">
+      <button onclick="location.href='index.html'"
+        style="background: none; color: #EF4444; width:100%; text-align:left; padding:12px; border:none; font-weight:600; font-size:14px; cursor:pointer; font-family:inherit;">Logout</button>
+      <div class="sidebar-foot" style="padding-left:12px; margin-top:0;">Signed in</div>
+    </div>
+  </aside>
+
+  <main class="main">
+    <!-- Header / Progress -->
+    <div class="max-w-4xl w-full mx-auto flex items-center justify-between mb-8">
+      <div>
+        <h2 id="subject-name" class="text-xl font-bold">Data Structures</h2>
+        <p id="difficulty-badge" class="text-xs uppercase tracking-widest text-indigo-400 font-semibold">EASY MODE</p>
+      </div>
+      <div class="text-right">
+        <p class="text-sm text-gray-400">Question <span id="current-index">1</span> of <span
+            id="total-questions">10</span></p>
+        <div class="w-48 h-1.5 bg-gray-800 rounded-full mt-2 overflow-hidden">
+          <div id="progress-bar" class="h-full accent-gradient transition-all duration-500" style="width: 10%"></div>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Main Test Area -->
-  <div class="max-w-4xl w-full mx-auto glass rounded-3xl p-10 flex-grow shadow-2xl flex flex-col">
-    <div id="question-container" class="flex-grow">
-      <h1 id="question-text" class="text-2xl font-semibold leading-relaxed mb-8">Loading question...</h1>
-      <p id="type-badge" class="text-xs text-gray-500 mb-6 uppercase tracking-wider">[ Single Choice ]</p>
+    <!-- Main Test Area -->
+    <div class="max-w-4xl w-full mx-auto glass rounded-3xl p-10 flex-grow shadow-2xl flex flex-col">
+      <div id="question-container" class="flex-grow">
+        <h1 id="question-text" class="text-2xl font-semibold leading-relaxed mb-8">Loading question...</h1>
+        <p id="type-badge" class="text-xs text-gray-500 mb-6 uppercase tracking-wider">[ Single Choice ]</p>
 
-      <div id="options-grid" class="grid grid-cols-1 md:grid-cols-2 gap-4">
-        <!-- Options here -->
+        <div id="options-grid" class="grid grid-cols-1 md:grid-cols-2 gap-4">
+          <!-- Options here -->
+        </div>
+      </div>
+
+      <div class="mt-10 flex items-center justify-between border-t border-gray-800 pt-8">
+        <p class="text-sm text-gray-500 italic" id="hint-text">Select one option to continue</p>
+        <button id="next-btn" disabled
+          class="px-10 py-3 rounded-xl font-bold bg-white/5 text-gray-500 cursor-not-allowed transition-all">
+          Submit Answer
+        </button>
       </div>
     </div>
-
-    <div class="mt-10 flex items-center justify-between border-t border-gray-800 pt-8">
-      <p class="text-sm text-gray-500 italic" id="hint-text">Select one option to continue</p>
-      <button id="next-btn" disabled
-        class="px-10 py-3 rounded-xl font-bold bg-white/5 text-gray-500 cursor-not-allowed transition-all">
-        Submit Answer
-      </button>
-    </div>
-  </div>
+  </main>
 
   <script>
     const API_BASE = 'http://localhost:3002/api/test';
